Fix alignment issue with overflowed search suggestions
If both the icon and the text are allowed to grow/shrink as needed,
flexbox will grow truncated text based on its original width, leading to
subtle sub-pixel alignment issues with other rows.

By fixing the icon to a specific width, we can ensure that the
suggestion text does not grow too big.

--- a/x-pack/legacy/plugins/code/public/components/main/main.scss
+++ b/x-pack/legacy/plugins/code/public/components/main/main.scss
@@ -246,9 +246,7 @@
 .codeSearch-suggestion__token {
   color: $euiColorFullShade;
   box-sizing: border-box;
-  flex-grow: 0;
-  flex-basis: auto;
-  width: $euiSizeXL;
+  flex: 0 0 $euiSizeXL;
   height: $euiSizeXL;
   text-align: center;
   overflow: hidden;
